--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/styleDetalle.css">
-    <link rel="stylesheet" href="styles/stylesHeaderFooter.css">
+    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/styleDetalle.css">
+    <link rel="stylesheet" href="../styles/stylesHeaderFooter.css">
     <title>Detalle | CAC-SPA</title>
 </head>
 
@@ -17,11 +17,11 @@
         <div class="header">
 
             <div class="logo">
-                <h1 class="h1Logo"><a href="./index.html" class="aLogo">CaCSpa</a></h1>
+                <h1 class="h1Logo"><a href="./inicio.html" class="aLogo">CaCSpa</a></h1>
             </div>
             <nav class="navHeader">
                 <ul class="ulNav">
-                    <a href="./pages/registro.html" class="aNav">
+                    <a href="./registro.html" class="aNav">
                         <li class="liNav">Registrarse</li>
                     </a>
                     <a href="./inicioSesion.html" class="aNav">
@@ -39,7 +39,7 @@
             <div class="servicioDetalle">
 
                 <div class="imgDetalle">
-                    <img src="assets/tratamiento4.webp" alt="imagenTratamiento">
+                    <img src="../assets/tratamiento4.webp" alt="imagenTratamiento">
                 </div>
 
 
@@ -82,28 +82,37 @@
             </div>
 
         </div>
-       
+
         <section class="redesSociales">
-          
+
             <div class="videoRelajacion">
                 <h2>Masaje con piedras calientes</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/MH_XeZJX_LY?si=aEupcTipFBkNodhw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="video" width="340" height="340"
+                    src="https://www.youtube.com/embed/MH_XeZJX_LY?si=aEupcTipFBkNodhw" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="redesDetalle">
                 <div class="tituloRedes">
                     <h2>- Siguenos en nuestras redes:</h2>
                 </div>
                 <ul>
-                    <li><a href="https://www.facebook.com/"><img src="assets/facebook-circle-logo-72.png" alt="logoFacebook"></a></li>
-                    <li><a href="https://twitter.com/"><img src="assets/twitter-logo-72.png" alt="logoTwiter"> </a></li>
-                    <li><a href="https://instagram.com/"></a><img src="assets/instagram-alt-logo-72.png" alt="logoInstagram"></li>
-                    <li><a href="https://www.youtube.com/"><img src="assets/youtube-logo-72.png" alt="logoYotube"></a></li>
+                    <li><a href="https://www.facebook.com/"><img src="../assets/facebook-circle-logo-72.png"
+                                alt="logoFacebook"></a></li>
+                    <li><a href="https://twitter.com/"><img src="../assets/twitter-logo-72.png" alt="logoTwiter"> </a>
+                    </li>
+                    <li><a href="https://instagram.com/"></a><img src="../assets/instagram-alt-logo-72.png"
+                            alt="logoInstagram"></li>
+                    <li><a href="https://www.youtube.com/"><img src="../assets/youtube-logo-72.png"
+                                alt="logoYotube"></a>
+                    </li>
                 </ul>
 
-            <div class="horariosDetalles">
-                <h2>- Días y horarios de antención:</h2>
-                <h3>- Lunes a Miércoles incluyendo Feriados de 9 a 21 horas</h3>
-            </div>
+                <div class="horariosDetalles">
+                    <h2>- Días y horarios de antención:</h2>
+                    <h3>- Lunes a Miércoles incluyendo Feriados de 9 a 21 horas</h3>
+                </div>
             </div>
         </section>
 
@@ -126,7 +135,7 @@
             </ul>
         </nav>
         <a href="#main" class="volverInicio">
-            <img src="./assets//flechaArriba.png" alt="flecha volver inicio">
+            <img src="../assets/flechaArriba.png" alt="flecha volver inicio">
         </a>
     </footer>
 
