--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -27,6 +27,9 @@
                     <a href="./inicioSesion.html" class="aNav">
                         <li class="liNav iniciarSesion">Iniciar Sesión</li>
                     </a>
+                    <a href="./consultaApi.html" class="aNav">
+                        <li class="liNav iniciarSesion">Consultar Api</li>
+                    </a>
                 </ul>
             </nav>
         </div>
@@ -130,7 +133,7 @@
                     <a href="/" class="footerLink">Ayuda</a>
                 </li>
                 <li class="footerListaItem">
-                    <a href="/" class="footerLink">Administrador Peliculas</a>
+                    <a href="../index.html" class="footerLink">Landing Page</a>
                 </li>
             </ul>
         </nav>
