--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -34,6 +34,9 @@
                     <a href="./inicioSesion.html" class="aNav">
                         <li class="liNav iniciarSesion">Iniciar Sesión</li>
                     </a>
+                    <a href="./consultaApi.html" class="aNav">
+                        <li class="liNav iniciarSesion">Consultar Api</li>
+                    </a>
                 </ul>
             </nav>
         </div>
@@ -57,61 +60,93 @@
         </section>
         <hr>
         <section class="tendencias" id="Tratamientos">
-            <h2 class="tituloSection">Tratamientos mas pedidos</h2>
+            <h2 class="tituloSection">Tratamientos más pedidos</h2>
             <div class="contenedorTendencias">
                 <div class="cajaTendencia">
                     <a href="detalle.html">
-                        <div class="pelicula">
+                        <div class="tratamiento">
                             <img src="../assets//tratamiento1.jpg" class="imagenTratamiento" alt="tratamiento spa 1">
+                            <div class="nombreTratamiento">
+                                <h3>Tratamiento de aromaterapia</h3>
+                            </div>
+                            <p class="textoTratamiento">Tratamiento de aromaterapia</p>
                         </div>
                     </a>
                 </div>
                 <div class="cajaTendencia">
                     <a href="detalle.html">
-                        <div class="pelicula">
+                        <div class="tratamiento">
                             <img src="../assets//tratamiento2.jpg" class="imagenTratamiento" alt="tratamiento spa 2">
+                            <div class="nombreTratamiento">
+                                <h3>Masaje relajante</h3>
+                            </div>
+                            <p class="textoTratamiento">Masaje relajante</p>
                         </div>
                     </a>
                 </div>
                 <div class="cajaTendencia">
                     <a href="detalle.html">
-                        <div class="pelicula">
+                        <div class="tratamiento">
                             <img src="../assets//tratamiento1.jpg" class="imagenTratamiento" alt="tratamiento spa 1">
+                            <div class="nombreTratamiento">
+                                <h3>Envoltura de algas</h3>
+                            </div>
+                            <p class="textoTratamiento">Envoltura de algas</p>
                         </div>
                     </a>
                 </div>
                 <div class="cajaTendencia">
                     <a href="detalle.html">
-                        <div class="pelicula">
+                        <div class="tratamiento">
                             <img src="../assets/tratamiento3.jpg" class="imagenTratamiento" alt="tratamiento spa 2">
+                            <div class="nombreTratamiento">
+                                <h3>Exfoliación corporal</h3>
+                            </div>
+                            <p class="textoTratamiento">Exfoliación corporal</p>
                         </div>
                     </a>
                 </div>
                 <div class="cajaTendencia">
                     <a href="detalle.html">
-                        <div class="pelicula">
+                        <div class="tratamiento">
                             <img src="../assets/tratamiento3.webp" class="imagenTratamiento" alt="tratamiento spa 1">
+                            <div class="nombreTratamiento">
+                                <h3>Facial rejuvenecedor</h3>
+                            </div>
+                            <p class="textoTratamiento">Facial rejuvenecedor</p>
                         </div>
                     </a>
                 </div>
                 <div class="cajaTendencia">
                     <a href="detalle.html">
-                        <div class="pelicula">
+                        <div class="tratamiento">
                             <img src="../assets/tratamiento4.webp" class="imagenTratamiento" alt="tratamiento spa 2">
+                            <div class="nombreTratamiento">
+                                <h3>Masaje con piedras calientes</h3>
+                            </div>
+                            <p class="textoTratamiento">Masaje con piedras calientes</p>
                         </div>
                     </a>
                 </div>
                 <div class="cajaTendencia">
                     <a href="detalle.html">
-                        <div class="pelicula">
+                        <div class="tratamiento">
                             <img src="../assets/tratamiento5.webp" class="imagenTratamiento" alt="tratamiento spa 1">
+                            <div class="nombreTratamiento">
+                                <h3>Tratamiento de aromaterapia</h3>
+                            </div>
+                            <p class="textoTratamiento">Tratamiento de aromaterapia</p>
                         </div>
                     </a>
                 </div>
                 <div class="cajaTendencia">
                     <a href="detalle.html">
-                        <div class="pelicula">
+                        <div class="tratamiento">
                             <img src="../assets/tratamiento6.webp" class="imagenTratamiento" alt="tratamiento spa 2">
+                            <div class="nombreTratamiento">
+                                <h3>Hidroterapia</h3>
+                            </div>
+                            <p class="textoTratamiento">Hidroterapia</p>
                         </div>
                     </a>
                 </div>
@@ -121,7 +156,7 @@
         </section>
         <hr>
         <section class="outer-container">
-            <h3 id="NuestrosEspecialistas" class="tituloSection">Nuestros Espacialistas</h3>
+            <h3 id="NuestrosEspecialistas" class="tituloSection">Nuestros Especialistas</h3>
             <div class="contenedor">
                 <div class="caja">
                     <img src="../assets/Trabajador3.jpeg" class="imagenDoctor" alt="doctor 1">
