--- a/pages/inicioSesion.html
+++ b/pages/inicioSesion.html
@@ -19,17 +19,8 @@
             </div>
             <nav class="navHeader navHeaderLogin">
                 <ul class="ulNav">
-                    <a href="#Tratamientos" class="aNav">
-                        <li class="liNav navDescartables">Tratamientos</li>
-                    </a>
-                    <a href="#NuestrosEspecialistas" class="aNav">
-                        <li class="liNav navDescartables">Nuestros Espacialistas</li>
-                    </a>
                     <a href="./registro.html" class="aNav">
                         <li class="liNav">Registrarse</li>
-                    </a>
-                    <a href="./inicioSesion.html" class="aNav">
-                        <li class="liNav iniciarSesion navDescartables">Iniciar Sesión</li>
                     </a>
                 </ul>
             </nav>
@@ -41,18 +32,20 @@
             <form action="">
                 <div class="inputform">
                     <div class="fila1">
-                        <label for="">Email: </label>
-                        <input type="email">
+                        <label for="email">Email: </label>
+                        <input type="email" id="email">
                     </div>
+                    <span id="errorEmail" class="mensajeError"></span>
                     <div class="fila2">
-                        <label for="">Contraseña: </label>
-                        <input type="password">
+                        <label for="password">Contraseña: </label>
+                        <input type="password" id="password">
                     </div>
+                    <span id="errorPass" class="mensajeError"></span>
                 </div>
                 <div class="botones-form">
-                    <button type="submit">Iniciar Sesión</button>
+                    <button type="submit" onclick="return enviar()">Iniciar Sesión</button>
                     <button type="reset">Limpiar</button>
-                    <a href="./pages/registro.html">
+                    <a href="./registro.html">
                         <p>Registrarse</p>
                     </a>
                 </div>
@@ -65,6 +58,8 @@
             </form>
         </div>
     </main>
+
+    <script src="../Js/inicioSesion.js"></script>
 </body>
 
 </html>
