--- a/pages/registro.html
+++ b/pages/registro.html
@@ -19,15 +19,6 @@
             </div>
             <nav class="navHeader navHeaderRegistro">
                 <ul class="ulNav">
-                    <a href="#Tratamientos" class="aNav">
-                        <li class="liNav navDescartables">Tratamientos</li>
-                    </a>
-                    <a href="#NuestrosEspecialistas" class="aNav">
-                        <li class="liNav navDescartables">Nuestros Espacialistas</li>
-                    </a>
-                    <a href="./pages/registro.html" class="aNav">
-                        <li class="liNav navDescartables">Registrarse</li>
-                    </a>
                     <a href="./inicioSesion.html" class="aNav">
                         <li class="liNav iniciarSesion">Iniciar Sesión</li>
                     </a>
@@ -43,16 +34,23 @@
             <h3>Registro</h3>
             <form action="">
                 <input type="text" placeholder="Nombre" id="nombre" name="nombre">
+                <span id="errorNombre" class="mensajeError"></span>
                 <input type="text" placeholder="Apellido" id="apellido" name="apellido">
+                <span id="errorApellido" class="mensajeError"></span>
                 <input type="email" placeholder="Email" id="email" name="email">
+                <span id="errorEmail" class="mensajeError"></span>
                 <input type="password" placeholder="Contraseña" id="password" name="password">
+                <span id="errorPass" class="mensajeError"></span>
                 <input type="date" id="fechaNac" name="fechaNac">
+                <span id="errorFechaNac" class="mensajeError"></span>
                 <input type="text" placeholder="Pais" id="pais" name="pais">
+                <span id="errorPais" class="mensajeError"></span>
                 <div class="terminos">
                     <input class="check" type="checkbox" id="check">
                     <label class="textoCheck" for="check">Acepto términos y condiciones</label>
                 </div>
-                <input class="registrar" type="submit" value="Registrarse">
+                <span id="errorCheck" class="mensajeError"></span>
+                <input class="registrar" type="button" onclick='return enviar()' value="Registrarse">
 
             </form>
 
@@ -62,7 +60,7 @@
     </main>
 
 
-
+    <script src="../Js/registro.js"></script>
 
 </body>
 
